Bug 32702: GetHistoryState works as expected now - check for success, r=nisheeth